--- a/index.html
+++ b/index.html
@@ -1,1 +1,159 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <style>
+    body {
+      background-color: #203655; 
+      margin: 0;
+      font-family: Arial, sans-serif;
+      color: #f6f1e5; 
+    }
+    h1 {
+      text-align: center;
+      color: #f6f1e5; 
+      font-size: 32px;
+      font-weight: bold;
+      font-family: 'Lucida Bright', serif;
+      margin-top: 20px;
+    }
+    svg {
+      display: block;
+      margin: auto;
+      width: 90%; 
+      height: auto;
+    }
+    .tooltip {
+      position: absolute;
+      background-color: rgba(126, 109, 95, 0.8); 
+      color: #f6f1e5; 
+      border: 2px solid #4b3621; 
+      border-radius: 6px;
+      padding: 10px 15px;
+      font-size: 14px;
+      pointer-events: none;
+      visibility: hidden;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    }
+    .legend-container {
+      position: absolute;
+      bottom: 20px;
+      left: 20px;
+      text-align: center;
+      color: #f6f1e5;
+    }
+    .legend-title {
+      font-weight: bold;
+      margin-bottom: 10px;
+      font-size: 16px;
+    }
+    .legend-bar {
+      position: relative;
+      height: 20px;
+      width: 300px; 
+      background: linear-gradient(to right, #d9c1a1, #7e6d5f); 
+      border: 1px solid #4b3621; 
+    }
+    .legend-bar span {
+      position: absolute;
+      top: 22px; 
+      color: #f6f1e5;
+      font-weight: bold;
+      font-size: 12px;
+    }
+    .legend-bar div {
+      position: absolute;
+      height: 6px;
+      width: 1px;
+      background-color: #f6f1e5;
+      top: 20px;
+    }
+  </style>
+</head>
+<body>
 
+<h1>Population Density Map of Singapore (2023)</h1>
+<h2>Yang Ruiyun(1009703)</h2>
+
+<svg></svg>
+
+<div class="tooltip" id="tooltip"></div>
+
+<div class="legend-container">
+  <div class="legend-title">Population Density Scale</div>
+  <div class="legend-bar">
+    <div style="left: 0%;"></div>
+    <div style="left: 16.6%;"></div>
+    <div style="left: 33.3%;"></div>
+    <div style="left: 50%;"></div>
+    <div style="left: 66.6%;"></div>
+    <div style="left: 83.3%;"></div>
+    <span style="left: 0%;">0</span>
+    <span style="left: 16.6%;">20000</span>
+    <span style="left: 33.3%;">40000</span>
+    <span style="left: 50%;">60000</span>
+    <span style="left: 66.6%;">80000</span>
+    <span style="left: 83.3%;">100000</span>
+  </div>
+</div>
+
+<script src="https://d3js.org/d3.v7.min.js"></script>
+
+<script>
+let width = 1000, height = 600;
+
+let svg = d3.select("svg")
+    .attr("viewBox", "0 0 " + width + " " + height);
+
+let tooltip = d3.select("#tooltip");
+
+Promise.all([d3.json("sgmap.json"), d3.csv("population2023.csv")]).then(data => {
+  let mapData = data[0].features;
+  let popData = data[1];
+
+  mapData.forEach(d => {
+    let subzone = popData.find(e => e.Subzone.toUpperCase() === d.properties.Name);
+    d.popdata = (subzone != undefined) ? parseInt(subzone.Population) : 0;
+  });
+
+  let colorScale = d3.scaleLinear()
+      .domain([0, 100000]) 
+      .range(["#d9c1a1", "#7e6d5f"]); 
+
+  let projection = d3.geoMercator()
+      .center([103.851959, 1.290270])
+      .fitExtent([[20, 20], [980, 580]], data[0]);
+
+  let geopath = d3.geoPath().projection(projection);
+
+  svg.append("g")
+      .attr("id", "districts")
+      .selectAll("path")
+      .data(mapData)
+      .enter()
+      .append("path")
+      .attr("d", geopath)
+      .attr("stroke", "#4b3621")
+      .attr("stroke-width", 0.5) 
+      .attr("fill", d => colorScale(d.popdata))
+      .on("mouseover", function(event, d) {
+        d3.select(this)
+          .attr("fill", "#7e6d5f") 
+          .attr("stroke-width", 2)
+          .attr("stroke", "#4b3621");
+        tooltip.style("visibility", "visible")
+            .html(`Subzone: ${d.properties.Name}<br>Population: ${d.popdata}`)
+            .style("top", (event.pageY + 10) + "px")
+            .style("left", (event.pageX + 10) + "px");
+      })
+      .on("mouseout", function(event, d) {
+        d3.select(this)
+          .attr("fill", d => colorScale(d.popdata))
+          .attr("stroke-width", 0.5);
+        tooltip.style("visibility", "hidden");
+      });
+});
+</script>
+
+</body>
+</html>
